--- a/index.html
+++ b/index.html
@@ -11,7 +11,58 @@
     <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@100..900&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>test</h1>
+    <div class="instruments-container">
+        <div class="main-gradient">
+            <div class="inner-main-gradient">
+                <div class="instrument">
+                    <div class="full column-flex">
+                        <div class="half">
+                            <h2>Tepary</h2>
+                            <p class="grayed">droning growing living <span class="white">instrument</span></p>
+                        </div>
+                        <div class="half">
+                            <h3 style="text-align: right;">text about complexity</h3>
+                        </div>
+                    </div>
+                    <div class="envelope-container main-border">
+                        <div class="main-border envelope-box"></div>
+                        <div class="inner-device-controls-container">
+                            <h3 class="inner-device-controls-grid-item" style="justify-content: center;">Pitch</h3>
+                            <div class="inner-device-controls-grid-item">
+                                <div class="column-flex">
+                                    <p>Max</p>
+                                </div>
+                                <div class="column-flex">
+                                    <p>Min</p>
+                                </div>
+                            </div>
+                            <div class="inner-device-controls-grid-item">
+                                <div class="column-flex">
+                                    <p>Sync</p>
+                                </div>
+                                <div class="column-flex">
+                                    <p>Quantize</p>
+                                </div>
+                            </div>
+                            <div class="inner-device-controls-grid-item">
+                                <div class="column-flex">
+                                    <p>Timescale</p>
+                                </div>
+                                <div class="column-flex">
+                                    <p>Controls</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="main-gradient">
+            <div class="inner-main-gradient">
+                <h1>test</h1>
+            </div>
+        </div>
+    </div>
   </body>
   <script src="js/main.js"></script>
 </html>
